kubernetes/apps/gitea/act-runner-alpha.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: act-runner-alpha
  namespace: gitea
spec:
  replicas: 1
  selector:
    matchLabels:
      app: act-runner
  template:
    metadata:
      labels:
        app: act-runner
    spec:
      containers:
        - env:
            - name: DOCKER_HOST
              value: tcp://localhost:2376
            - name: DOCKER_CERT_PATH
              value: /certs/client
            - name: DOCKER_TLS_VERIFY
              value: "1"
            - name: GITEA_INSTANCE_URL
              value: http://gitea-http:3000
            - name: GITEA_RUNNER_REGISTRATION_TOKEN
              valueFrom:
                secretKeyRef:
                  name: gitea-runner-secret-alpha
                  key: registration-token
          image: docker.io/gitea/act_runner:0.2.3-dind-rootless # {"$imagepolicy": "git:act-runner-image-policy"}
          name: gitea-act-runner
          resources: {}
            # limits:
            #   cpu: 100m
            #   memory: 100Mi
            # requests:
            #   cpu: 100m
            #   memory: 100Mi
          securityContext:
            privileged: true
          volumeMounts:
            - name: act-runner-volume
              mountPath: /data
      volumes:
        - name: act-runner-volume
          persistentVolumeClaim:
            claimName: act-runner-volume-claim
---
