kubernetes/apps/gitea/cgit.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/limit-rpm: "100"
  name: cgit
  namespace: gitea
spec:
  ingressClassName: nginx
  rules:
    - host: &host cgit.flight.kja.us
      http:
        paths:
          - backend:
              service:
                name: cgit
                port:
                  number: 3000
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - *host
---
kind: Service
apiVersion: v1
metadata:
  labels:
    app: cgit
  name: cgit
  namespace: gitea
spec:
  ports:
    - port: 3000
      targetPort: 80
  selector:
    app: cgit
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cgit
  namespace: gitea
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cgit
  template:
    metadata:
      labels:
        app: cgit
    spec:
      containers:
        - name: cgit
          image: chruth/alpine-cgit:d008059
          ports:
            - containerPort: 80
              name: http
          livenessProbe:
            tcpSocket:
              port: 80
            initialDelaySeconds: 10
            timeoutSeconds: 10
          resources:
            requests:
              cpu: 100m
              memory: 100Mi
            limits:
              cpu: 100m
              memory: 100Mi
          volumeMounts:
            - name: git-data-volume
              mountPath: /data
              readOnly: true
            - name: cgit-config-volume
              mountPath: /files/cgitrc
              subPath: cgitrc
              readOnly: false
            - name: cgit-config-volume
              mountPath: /files/nginx.conf
              subPath: nginx_conf
              readOnly: false
      volumes:
        - name: git-data-volume
          persistentVolumeClaim:
            claimName: git-pvc
        - name: cgit-config-volume
          configMap:
            items:
              - key: config_cgitrc
                path: cgitrc
                mode: 0644
              - key: config_nginx
                path: nginx_conf
                mode: 0644
            name: cgit-configmap
---
